--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "transpile": "babel src --out-dir dist --ignore ./src/**/*.test.jsx && cp src/index.d.ts dist/index.d.ts",
     "build": "rm -rf dist && mkdir dist && npm run transpile && npm run bundle",
     "prepublish": "npm run build",
-    "storybook": "start-storybook -p 6006",
+    "storybook": "start-storybook -p 6111",
     "build-storybook": "build-storybook",
     "test:jest": "jest --config ./test/jest.config.json",
     "test:storyshots": "jest --config ./test/jest.storyshots.config.json",
@@ -37,8 +37,8 @@
     "prop-types": "^15.5.8"
   },
   "peerDependencies": {
-    "react": "^15.5.4 || ^16.0.0",
-    "react-dom": "^15.5.4 || ^16.0.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.3",
@@ -46,14 +46,6 @@
     "@babel/plugin-proposal-class-properties": "^7.4.0",
     "@babel/preset-env": "^7.4.3",
     "@babel/preset-react": "^7.0.0",
-    "@storybook/addon-actions": "^5.0.10",
-    "@storybook/addon-knobs": "^5.0.10",
-    "@storybook/addon-links": "^5.0.10",
-    "@storybook/addon-storyshots": "^5.0.10",
-    "@storybook/addon-storyshots-puppeteer": "^5.0.10",
-    "@storybook/addon-viewport": "^5.0.11",
-    "@storybook/addons": "^5.0.10",
-    "@storybook/react": "^5.0.10",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.7.1",
     "babel-loader": "^8.0.5",
@@ -66,11 +58,9 @@
     "eslint-plugin-prefer-object-spread": "^1.1.0",
     "eslint-plugin-react": "^7.12.4",
     "jest": "^24.7.1",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hot-loader": "^1.3.1",
-    "react-test-renderer": "^16.8.6",
-    "react-testing-library": "^7.0.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.1",
